docs: document Compose migration use cases